tests/duarouter/trips/errors/vehicle_false_arrivalpos/errors.duarouter
Error: Invalid arrivalPos definition for trip '0';
 must be one of ("random", "max", or a float)
Quitting (on error).
